Reference minesweeper js files from the view

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,11 @@
 extends layout
 
+block head
+  script(src='javascripts/Cell.js')
+  script(src='javascripts/ColorCell.js')
+  script(src='javascripts/Minefield.js')
+  script(src='javascripts/Minesweeper.js')
+  script(src='javascripts/ImageMinesweeper.js')
+
 block content
   p #{cells}
