--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title= title
+    title Pokesweeper
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block head
   body
     block content
