--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Pokesweeper
+    script(src='http://code.jquery.com/jquery-1.9.1.js')
     link(rel='stylesheet', href='/stylesheets/style.css')
     block head
   body
