--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ block head
   script(src='javascripts/Minefield.js')
   script(src='javascripts/Minesweeper.js')
   script(src='javascripts/ImageMinesweeper.js')
+  script(src='javascripts/Pokesweeper.js')
   script(src='javascripts/index.js')
 
 block content
