--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,25 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 a {
   color: #00B7FF;
+}
+
+.row {
+  clear: both;
+}
+
+.cell {
+  height: 25px;
+  width: 25px;
+  float: left;
+  cursor: pointer;
 }
