--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,9 +21,15 @@ a {
   height: 25px;
   width: 25px;
   float: left;
-  cursor: pointer;
 }
 
-.emptyCell {
-  cursor: default;
+.unopenCell {
+  cursor: pointer;
+  background-image: url('/images/pattern.png');
+  background-size: cover;
+}
+
+.unopenCell:active {
+  background-image: none;
+  background-color: #C0C0C0;
 }
