--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,9 +18,15 @@ a {
 }
 
 .cell {
-  height: 25px;
+  height: 20px;
   width: 25px;
+  padding-top: 5px;
   float: left;
+  color: white;
+  text-shadow: 0 0 2px black;
+  text-align: center;
+  vertical-align: middle;
+  cursor: default;
 }
 
 .unopenCell {
