--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #FAFAFA;
+  
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -12,6 +14,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+.counterContainer {
+  float: left;
+  width: 100px;
+}
+
+/****************** GAME STUFF ******************/
 
 .row {
   clear: both;
