--- a/views/index.jade
+++ b/views/index.jade
@@ -24,6 +24,7 @@ block content
   h1
     a(name='Pokesweeper' href='/') Pokesweeper
   select#dropdown(onchange='selectPokemon()')
+  #resetButton
   #counters
     #bombContainer.counterContainer
       #bombCounter
