--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,7 @@ block head
   script(src='javascripts/Minefield.js')
   script(src='javascripts/Minesweeper.js')
   script(src='javascripts/ImageMinesweeper.js')
+  script(src='javascripts/PokeUtil.js')
   script(src='javascripts/Pokesweeper.js')
   script(src='javascripts/names.js')
   script(src='javascripts/index.js')
