--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     block head
   body
-    block content
+    #content
+      block content
