Pre-cache images

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,6 +70,10 @@ h1#pageTitle {
   overflow: auto;
 }
 
+#cache {
+  display: none;
+}
+
 /****************** GAME STUFF ******************/
 
 .row {
