--- a/views/index.jade
+++ b/views/index.jade
@@ -50,4 +50,5 @@ block content
     span.st_tumblr_hcount(displayText='Tumblr' st_url='http://pokesweeper.takumifujimoto.com' st_title='Pokesweeper')
     span.st_googleplus_hcount(displayText='Google +' st_url='http://pokesweeper.takumifujimoto.com' st_title='Pokesweeper')
     span.st_reddit_hcount(displayText='Reddit' st_url='http://pokesweeper.takumifujimoto.com' st_title='Pokesweeper')
-    
+  
+  #cache
