--- a/views/index.jade
+++ b/views/index.jade
@@ -42,8 +42,15 @@ block content
       #pokedexCounter.counter
       #pokedexLabel POKÉDEX
   #resetButton
+  
   #field
   
+  #footer
+    | View on 
+    a(href='https://github.com/takumif/pokesweeper' name='GitHub' target='blank') GitHub
+    | . Created by 
+    a(href='http://www.takumifujimoto.com' name='Takumi Fujimoto' target='blank') Takumi Fujimoto
+    
   #shareThis
     span.st_facebook_hcount(displayText='Facebook' st_url='http://pokesweeper.takumifujimoto.com' st_title='Pokesweeper')
     span.st_twitter_hcount(displayText='Tweet' st_url='http://pokesweeper.takumifujimoto.com' st_title='Pokesweeper')
