--- a/views/index.jade
+++ b/views/index.jade
@@ -40,9 +40,27 @@ block content
   #field
   
   #footer
-    | View on 
-    a(href='https://github.com/takumif/pokesweeper' name='GitHub' target='blank') GitHub
-    | . Created by 
-    a(href='http://www.takumifujimoto.com' name='Takumi Fujimoto' target='blank') Takumi Fujimoto
-  
+    p The difficulty increases with the Pokémon's position in the regional Pokédex.
+    p
+      | View on 
+      a(href='https://github.com/takumif/pokesweeper' name='GitHub' target='blank') GitHub
+      | . Created by 
+      a(href='http://www.takumifujimoto.com' name='Takumi Fujimoto' target='blank') Takumi Fujimoto
+      | .
+  #share.
+    <!-- AddToAny BEGIN -->
+    <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+    <a class="a2a_button_facebook"></a>
+    <a class="a2a_button_twitter"></a>
+    <a class="a2a_button_google_plus"></a>
+    <a class="a2a_button_reddit"></a>
+    <a class="a2a_button_tumblr"></a>
+    </div>
+    <script type="text/javascript">
+    var a2a_config = a2a_config || {};
+    a2a_config.linkname = "Pokesweeper";
+    a2a_config.linkurl = "pokesweeper.takumifujimoto.com";
+    </script>
+    <script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
+    <!-- AddToAny END -->
   #cache
