Add reference to jQuery Mobile

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ block head
   script.
     cells = !{JSON.stringify(cells)};
     currentId = '#{id}';
+  script(src='javascripts/jquery.mobile.custom.min.js')
   script(src='javascripts/Timer.js')
   script(src='javascripts/Cell.js')
   script(src='javascripts/ColorCell.js')
