--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,6 +118,22 @@ h1#pageTitle {
   background-color: #C0C0C0;
 }
 
+#pokedexGrid {
+  width: 500px;
+  margin: auto;
+}
+
+.pokedexCell{
+  display: inline;
+  width: 50px;
+  height: 50px;
+}
+
+.pokedexSprite {
+  width: inherit;
+  height: inherit;
+}
+
 .flaggedCell {
   cursor: pointer;
   background-image: url('/images/pattern_flagged.png');
