--- a/views/pokedex.jade
+++ b/views/pokedex.jade
@@ -1,16 +1,14 @@
 extends layout
 
 block head
-  script(src='javascripts/jquery.mobile.custom.min.js')
-  script(src='javascripts/PokeUtil.js')
-  script(src='javascripts/Pokesweeper.js')
   script(src='javascripts/names.js')
+  script(src='javascripts/PokeUtil.js')
   script(src='javascripts/pokedex.js')
 
 
 block content
  h1#pageTitle
-   a(name='Pokesweeper' href='/') Pokesweeper
+   a(name='Pokesweeper' href='/') Pokésweeper
 
  #pokedexGrid
 
