Move getSolved to PokeUtil; Add a counter to the Pokedex page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,6 +130,10 @@ h1#pageTitle {
 
 /****************** POKEDEX ******************/
 
+#pokedexCounter {
+  text-align: center;
+}
+
 #pokedexGrid {
   width: 600px;
   margin: auto;
