--- a/views/pokedex.jade
+++ b/views/pokedex.jade
@@ -7,17 +7,19 @@ block head
 
 
 block content
- h1#pageTitle
-   a(name='Pokesweeper' href='/') Pokésweeper
+  h1#pageTitle
+    a(name='Pokesweeper' href='/') Pokésweeper
 
- #pokedexGrid
+  h2#pokedexCounter
 
- #footer
-  p The difficulty increases with the Pokémon's position in the regional Pokédex.
-  p
-    | View on 
-    a(href='https://github.com/takumif/pokesweeper' name='GitHub' target='blank') GitHub
-    | . Created by 
-    a(href='http://www.takumifujimoto.com' name='Takumi Fujimoto' target='blank') Takumi Fujimoto
-    | .
+  #pokedexGrid
+
+  #footer
+   p The difficulty increases with the Pokémon's position in the regional Pokédex.
+   p
+     | View on 
+     a(href='https://github.com/takumif/pokesweeper' name='GitHub' target='blank') GitHub
+     | . Created by 
+     a(href='http://www.takumifujimoto.com' name='Takumi Fujimoto' target='blank') Takumi Fujimoto
+     | .
 
