--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,13 +70,14 @@ h1#pageTitle {
 
 #field {
   width: max-content;
-  margin: 20px auto 70px auto;
+  margin: 20px auto;
   overflow: auto;
 }
 
 #footer {
   width: max-content;
-  margin: 20px auto;
+  margin: auto;
+  padding: 20px;
   clear: both;
 }
 
