CSS changes to Pokedex

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,4 +159,9 @@ h1#pageTitle {
 .pokedexNonSolved {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
+  opacity: 0.5;
+}
+
+.pokedexNonSolved:hover {
+  opacity: 1;
 }
