Add Lisa to the footer

--- a/views/index.jade
+++ b/views/index.jade
@@ -48,6 +48,8 @@ block content
       a(href='https://github.com/takumif/pokesweeper' name='GitHub' target='blank') GitHub
       | . Created by 
       a(href='http://www.takumifujimoto.com' name='Takumi Fujimoto' target='blank') Takumi Fujimoto
+      | and
+      a(href='http://www.lisaxie.net' name='Lisa Xie' target='blank') Lisa Xie
       | .
   #share.
     <!-- AddToAny BEGIN -->
